# giteyes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
giteyes/: __init__.py  app.py  app.tcss  cli.py  git_data.py  models.py
giteyes/sources/: __init__.py  github_api.py  local.py
giteyes/widgets/: commits.py  contributors.py  heatmap.py  hotspots.py
tests/: conftest.py  test_app.py  test_cli.py  test_git_data.py  test_github_api.py  test_heatmap_hover.py  test_widget_resize.py
