[project]
name = "giteyes"
version = "0.2.0"
description = "A terminal dashboard for exploring git commit activity, locally or via the GitHub API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "henderson-01" }]
dependencies = [
    "textual>=0.58",
    "gitpython>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32.2", # Bumped from 2.31 to fix CVEs
]

[project.urls]
Homepage = "https://github.com/henderson-01/giteyes"

[project.scripts]
giteyes = "giteyes.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2", # Bumped from 8.0 to fix tmpdir handling
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
